--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,16 @@
-﻿<Window x:Class="WpfMVVM60.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfMVVM60"
+        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
+        xmlns:Linq="clr-namespace:Newtonsoft.Json.Linq;assembly=Newtonsoft.Json" x:Class="WpfMVVM60.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,0,183,297" Loaded="DataGrid_Loaded"/>
+        <DataGrid x:Name="dataGrid" Margin="92,10,92,150" Loaded="DataGrid_Loaded"/>
+        <Button x:Name="B_update" Content="Обновить" HorizontalAlignment="Left" Margin="108,325,0,0" VerticalAlignment="Top" Height="35" Width="88" Click="B_update_Click"/>
 
     </Grid>
 </Window>
